# social-app

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  policy.json
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_account_table.rs  m20230829_174346_create_notification_table.rs  m20230917_170252_create_variables_table.rs
backend/src/: active_user.rs  app.rs  app_state.rs  arguments.rs  authorization_filter.rs  config.rs  endpoint.rs  error.rs  image_domain.rs  main.rs  service.rs
backend/src/arguments/: mod.rs  neo4j.rs  postgres.rs  s3.rs  start_subcommand.rs  valkey.rs
backend/src/endpoint/: account.rs  activation.rs  chat.rs  domain.rs  friend.rs  image.rs  mod.rs  notification.rs  post.rs  profile.rs  tag.rs  wallpaper.rs
backend/src/entities/: account.rs  mod.rs  notification.rs  prelude.rs  sea_orm_active_enums.rs  variables.rs
backend/src/service/: account.rs  activation.rs  chat.rs  domain.rs  email.rs  friend.rs  image.rs  mod.rs  notification.rs  post.rs  profile.rs  tag.rs  wallpaper.rs
dto/: Cargo.toml
dto/src/: account.rs  activation.rs  chat.rs  domain.rs  friend.rs  image.rs  lib.rs  notification.rs  post.rs  profile.rs  tag.rs
entity/: Cargo.toml
entity/src/: account.rs  lib.rs  notification.rs  prelude.rs  sea_orm_active_enums.rs  variables.rs
frontend/: angular.json  package-lock.json  package.json  proxy.json
frontend/src/: styles.css
frontend/src/app/: app-routing.module.ts  app.component.css  app.component.ts  app.module.ts
frontend/src/app/admin/admin-activation-email-editor/: admin-activation-email-editor.component.css  admin-activation-email-editor.component.html  admin-activation-email-editor.component.ts
frontend/src/app/admin/admin-manage-domains/: admin-domain.ts  admin-manage-domains.component.css  admin-manage-domains.component.html  admin-manage-domains.component.ts
frontend/src/app/admin/admin-tag-editor/: admin-tag-editor.component.css  admin-tag-editor.component.html  admin-tag-editor.component.ts
frontend/src/app/apps/change-password/: change-password.component.css  change-password.component.html  change-password.component.ts
frontend/src/app/apps/change-profile-picture/: change-profile-picture.component.css  change-profile-picture.component.html  change-profile-picture.component.ts
frontend/src/app/apps/change-username/: change-username.component.css  change-username.component.html  change-username.component.ts
frontend/src/app/apps/friend-manager/: friend-manager.component.css  friend-manager.component.html  friend-manager.component.ts
frontend/src/app/apps/messenger/: messenger.component.css  messenger.component.html  messenger.component.ts
frontend/src/app/apps/notification/: notification.component.html  notification.component.ts
frontend/src/app/apps/notification-center/: notification-center.component.css  notification-center.component.html  notification-center.component.ts
frontend/src/app/apps/people-searcher/: people-searcher.component.css  people-searcher.component.html  people-searcher.component.ts
frontend/src/app/apps/popup/: popup-params.ts  popup.component.css  popup.component.html  popup.component.ts
frontend/src/app/apps/post-writer/: post-writer.component.css  post-writer.component.html  post-writer.component.ts
frontend/src/app/apps/share-image/: share-image.component.css  share-image.component.html  share-image.component.ts
frontend/src/app/apps/tag-picker/: tag-picker-params.ts  tag-picker.component.css  tag-picker.component.html  tag-picker.component.ts
frontend/src/app/apps/user-profile/: user-profile.component.css  user-profile.component.html  user-profile.component.ts
frontend/src/app/apps/wallpaper-picker/: wallpaper-picker.component.css  wallpaper-picker.component.html  wallpaper-picker.component.ts
frontend/src/app/const/: account-type.ts  notification-type.ts
frontend/src/app/data/: activation-email-template.ts  detailed-tag.ts  friend-message.ts  friend-request.ts  list-display.ts  notification.ts  post.ts  profile.ts  search-non-friend-result.ts  tag.ts  variable-response.ts  wallpaper.ts  window-content.ts  window-frame.ts
frontend/src/app/directives/: draggable.directive.ts
frontend/src/app/display/: display.component.ts
frontend/src/app/forms/login-form/: login-form.component.css  login-form.component.html  login-form.component.ts
frontend/src/app/forms/registration-form/: registration-form.component.css  registration-form.component.html  registration-form.component.ts
frontend/src/app/guard/: is-logged-in.guard.ts
frontend/src/app/login-screen/: login-screen.component.ts
frontend/src/app/main-screen/: main-screen.component.css  main-screen.component.html  main-screen.component.ts
frontend/src/app/main-screen/taskbar/: taskbar.component.css  taskbar.component.html  taskbar.component.ts
frontend/src/app/service/: account.service.ts  activation.service.ts  auth.service.ts  chat.service.ts  domain.service.ts  event.service.ts  friend.service.ts  image.service.ts  login.service.ts  new-window.service.ts  notification.service.ts  popup.service.ts  post.service.ts  profile.service.ts  registration.service.ts  sound.service.ts  tag.service.ts  wallpaper.service.ts  window.service.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20240826_090118_create_account_table.rs  m20240826_093854_create_notification_table.rs  m20240826_094645_create_variables_table.rs
src/: main.rs  service.rs
src/endpoint/: account.rs
src/service/: account.rs  email.rs
(+76 files in other folders)
