[package]
name = "social_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.7.7", features = ["cookie"] }
axum-macros = "0.3.8"
bcrypt = "0.15.0"
redis = { version = "0.23.2", features = ["tokio-comp", "tokio-native-tls-comp", "aio", "connection-manager"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
