[workspace]
members = ["backend", "dto", "entity", "migration"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
axum-macros = "0.5.0"
axum_typed_multipart = "0.16.5"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
image = "0.25.9"
minio-rsc = { version = "0.2.6", features = ["tokio", "fs-tokio"] }
neo4rs = "0.8.0"
redis = { version = "1.0.2", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "aio",
    "connection-manager",
] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "v7"] }

[profile.dev.package."*"]
opt-level = 3
