[package]
name = "backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
axum_typed_multipart = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
minio-rsc = { workspace = true }
neo4rs = { workspace = true }
redis = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

dto = { path = "../dto" }
entity = { path = "../entity" }
